[package]
name = "rs-audio"
version = "0.2.0"
authors = ["shots"]
description = "A retro audio engine for making music programmatically."
license = "MIT"
repository = "https://github.com/xshotss/rs-audio"
keywords = ["audio", "music", "dsp"]
categories = ["multimedia"]
edition = "2021"

[dependencies]
hound = "3.5.1"
rodio = "0.17"