[package]
name = "rs-audio"
version = "1.2.1"
authors = ["shots"]
description = "A retro audio engine for making music programmatically."
license = "MIT"
repository = "https://github.com/xshotss/rs-audio"
keywords = ["audio", "music", "dsp"]
categories = ["multimedia"]
edition = "2021"

[dependencies]
hound = "3.5.1"
rodio = "0.17"
serde = { version = "1.0.143", features = ["derive"]}
serde_json = "1.0.143"
